--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <hr class="divider my-4">
         </div>
         <div class="col-lg-8 align-self-baseline">
-          <p class="text-white-75 font-weight-light mb-5">New and improved dice game is free and available now, try it for free down below. PS some compilation may be required</p>
+          <p class="text-white-75 font-weight-light mb-5">New and improved dice game is here and available now, try it for free down below. PS some compilation may be required</p>
           <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
         </div>
       </div>
@@ -70,7 +70,9 @@
         <div class="col-lg-8 text-center">
           <h2 class="text-white mt-0">We've got what you need!</h2>
           <hr class="divider light my-4">
-          <p class="text-white-50 mb-4">Start Bootstrap has everything you need to get your new website up and running in no time! Choose one of our open source, free to download, and easy to use themes! No strings attached!</p>
+          <p class="text-white-50 mb-4">A game of rolling dice against an opponent, experience fun like never before
+            while you roll your way to higher and higher scores but watch out for 1s as they reset your score.
+            Be the first to 91 to defeat your opponent and relish in sweet sweet victory</p>
           <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a>
         </div>
       </div>
@@ -100,8 +102,8 @@
         <div class="col-lg-3 col-md-6 text-center">
           <div class="mt-5">
             <i class="fas fa-4x fa-globe text-primary mb-4"></i>
-            <h3 class="h4 mb-2">Ready to Publish</h3>
-            <p class="text-muted mb-0">You can use this design as is, or you can make changes!</p>
+            <h3 class="h4 mb-2">Ready to Play</h3>
+            <p class="text-muted mb-0">You can use this game as is, or you can make changes!</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
